--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon ./src/send.js"
   },
   "author": "kgll",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "expres": "0.0.5",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serialport": "^10.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
